assets/css/app.css
/* This file is for your main application CSS */
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

@layer components {
  .container-box {
    @apply max-w-7xl mx-auto p-6 md:px-12;
  }

  .page-box {
    @apply py-16 md:py-20;
  }

  .page-heading {
    @apply text-xl font-bold;
  }

  .page-description {
    @apply text-secondary-text font-normal mt-1;
  }

  .form-container {
    @apply flex flex-col space-y-6 md:items-start;
  }

  .input-container {
    @apply flex flex-col w-full;
  }

  .form-input {
    @apply border-primary-border focus:ring-0 w-full rounded-lg focus:outline-none focus:border-warm-gray-500;
  }

  .input-label {
    @apply mb-1;
  }

  .input-error {
    @apply text-sm text-primary-error block mt-1;
  }

  .base-button {
    @apply px-4 py-2 rounded-lg flex flex-row items-center space-x-1.5;
  }

  .primary-button {
    @apply bg-primary base-button text-gray-50;
  }

  .submit-button {
    @apply primary-button;
  }

  .secondary-button {
    @apply bg-white base-button border rounded-lg border-primary-border shadow-sm;
  }

  .accent-button {
    @apply secondary-button border-accent;
  }

  .error-box {
    @apply text-red-500 bg-red-50 border-red-500 px-4 py-2 rounded-md;
  }

  .form-error-box {
    @apply error-box mb-8;
  }

  .primary-card {
    @apply flex flex-col items-start p-6 bg-white shadow-sm rounded-lg border border-primary-border;
  }

  .base-link {
    @apply flex flex-row items-center space-x-1.5 text-gray-600 hover:text-gray-800;
  }

  .primary-link {
    @apply base-link;
  }

  .secondary-link {
    @apply base-link text-sm;
  }
}

/* LiveView specific classes for your customization */
.phx-no-feedback.invalid-feedback,
.phx-no-feedback .invalid-feedback {
  display: none;
}

.phx-click-loading {
  opacity: 0.5;
  transition: opacity 1s ease-out;
}

.phx-disconnected {
  cursor: wait;
}
.phx-disconnected * {
  pointer-events: none;
}

.phx-modal {
  opacity: 1 !important;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.4);
}

.phx-modal-content {
  background-color: #fefefe;
  margin: 15vh auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
}

.phx-modal-close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.phx-modal-close:hover,
.phx-modal-close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

